# repoctx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: README.md  build_graph.py  quickstart.py
repoctx/: __init__.py  __main__.py  api.py  cli.py  config.py  ignore.py  indexer.py  logging.py  text_utils.py  toolkit.py  types.py  walk.py
repoctx/chunking/: __init__.py  base.py  python_ast.py  registry.py
repoctx/embeddings/: __init__.py  base.py  hashing.py  registry.py  torch_backend.py
repoctx/graph/: __init__.py  builder.py  context.py  graph.py  symbols.py
repoctx/index/: __init__.py  bm25.py  store.py  vector_index.py
repoctx/retrieval/: __init__.py  fusion.py  search.py
tests/: __init__.py  conftest.py  test_bm25.py  test_builder.py  test_chunking.py  test_cli.py  test_config.py  test_context.py  test_embeddings.py  test_fusion.py  test_graph.py  test_indexer.py  test_search.py  test_smoke.py  test_store.py  test_symbols.py  test_text_utils.py  test_toolkit.py  test_vector_index.py
tests/fixtures/sample_pkg/: __init__.py  calc.py  greet.py
