[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repoctx"
version = "0.1.0"
description = "Repository-level context toolkit: code embeddings, dependency graph and semantic search"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wen Tao" }]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
repoctx = "repoctx.cli:main"

[tool.setuptools.packages.find]
include = ["repoctx*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["repoctx", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W", "C4"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.9"
files = ["repoctx"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["repoctx"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
